--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Basic Recipes</title>
 </head>
 <body>
-    <h1>recipes</h1>
-    <a href="./recipes/poundcake.html">Pound Cake</a>
+    <h1>Recipes</h1>
+    <p>Hello and welcome to basic recipes website, below you can find the recipes:</p>
+    <ul>
+        <li><a href="./recipes/poundcake.html">Pound Cake</a></li>
+        <li><a href="./recipes/chickensalad.html">Chicken Salad</a></li>
+        <li><a href="./recipes/cinnamontea.html">Cinnamon Tea</a></li>
+    </ul>
 </body>
 </html>
